# xqute

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: build.yml  docs.yml
advanced/: index.html
api/source/xqute/: index.html
api/source/xqute.defaults/: index.html
api/source/xqute.job/: index.html
api/source/xqute.path/: index.html
api/source/xqute.plugin/: index.html
api/source/xqute.scheduler/: index.html
api/source/xqute.schedulers/: index.html
api/source/xqute.schedulers.container_scheduler/: index.html
api/source/xqute.schedulers.gbatch_scheduler/: index.html
api/source/xqute.schedulers.local_scheduler/: index.html
api/source/xqute.schedulers.sge_scheduler/: index.html
api/source/xqute.schedulers.slurm_scheduler/: index.html
api/source/xqute.schedulers.ssh_scheduler/: index.html
api/source/xqute.schedulers.ssh_scheduler.scheduler/: index.html
api/source/xqute.schedulers.ssh_scheduler.submitter/: index.html
api/source/xqute.utils/: index.html
api/source/xqute.xqute/: index.html
api/xqute/: index.html
api/xqute.defaults/: index.html
api/xqute.job/: index.html
api/xqute.path/: index.html
api/xqute.plugin/: index.html
api/xqute.scheduler/: index.html
api/xqute.schedulers/: index.html
api/xqute.schedulers.container_scheduler/: index.html
api/xqute.schedulers.gbatch_scheduler/: index.html
api/xqute.schedulers.local_scheduler/: index.html
api/xqute.schedulers.sge_scheduler/: index.html
api/xqute.schedulers.slurm_scheduler/: index.html
api/xqute.schedulers.ssh_scheduler/: index.html
api/xqute.schedulers.ssh_scheduler.scheduler/: index.html
api/xqute.schedulers.ssh_scheduler.submitter/: index.html
api/xqute.utils/: index.html
api/xqute.xqute/: index.html
docs/: advanced.md  index.md  plugins.md  quickstart.md  schedulers.md  style.css  user-guide.md
plugins/: index.html
quickstart/: index.html
schedulers/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  q.py  test_container_scheduler.py  test_gbatch_scheduler.py  test_local_scheduler.py  test_main.py  test_path.py  test_sge_scheduler.py  test_slurm_scheduler.py  test_ssh_scheduler.py  test_timeout.py  test_utils.py  test_xqute.py
tests/mocks/: docker  gcloud  qdel  qstat  qsub  sbatch  squeue  ssh
user-guide/: index.html
xqute/: __init__.py  __main__.py  consumer.py  defaults.py  job.py  path.py  plugin.py  scheduler.py  utils.py  xqute.py
xqute/schedulers/: __init__.py  container_scheduler.py  gbatch_scheduler.py  local_scheduler.py  sge_scheduler.py  slurm_scheduler.py  ssh_scheduler.py
xqute/schedulers/ssh_scheduler/: __init__.py  client.py  scheduler.py  submitter.py
