[tool.poetry]
name = "xqute"
version = "0.2.3"
description = "A job management system for python"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
homepage = "https://github.com/pwwang/xqute"
repository  = "https://github.com/pwwang/xqute"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
simplug = "^0.3"
diot = "^0.2"
rich = "^13"
uvloop = "^0"
aiopath = [
    {version = "0.5.*", python = "<3.10"},
    {version = "^0.6", python = ">=3.10"},
]

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^4"
pytest-asyncio = "^0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
addopts = "-vv --cov=xqute --cov-report xml:.coverage.xml --cov-report term-missing"
filterwarnings = [
    # "error"
]
console_output_style = "progress"
junit_family = "xunit1"
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef"]
show_error_codes = true
strict_optional = false

[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
