[tool.poetry]
name = "xqute"
version = "0.9.0"
description = "A job management system for python"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
homepage = "https://github.com/pwwang/xqute"
repository  = "https://github.com/pwwang/xqute"
readme = "README.md"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.9"
simplug = "^0.5"
rich = "^13"
uvloop = "^0"
yunpath = "^0.0"
argx = "^0.3"
google-cloud-storage = {version = "^3", optional = true}
cloudsh = {version = "^0.1", optional = true}

[tool.poetry.extras]
gcs = ["google-cloud-storage"]
gs = ["google-cloud-storage"]
cloudsh = ["cloudsh"]

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-cov = "^6"
pytest-asyncio = "^0"
python-dotenv = "^1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
addopts = "-vv --cov=xqute --cov-report xml:.coverage.xml --cov-report term-missing"
filterwarnings = [
   "ignore:.+may lead to deadlocks in the child:DeprecationWarning",
]
asyncio_default_fixture_loop_scope = "function"
console_output_style = "progress"
junit_family = "xunit1"
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef"]
show_error_codes = true
strict_optional = false

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
