[project]
name = "xqute"
version = "2.0.9"
description = "A job management system for python"
authors = [{name = "pwwang", email = "pwwang@pwwang.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "simplug>=0.5",
    "rich>=14",
    "uvloop>=0",
    "panpath>=0.4",
    "argx>=0.4",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
gcs = ["gcloud-aio-storage>=8.0.0"]
gs = ["gcloud-aio-storage>=8.0.0"]
cloudsh = ["cloudsh>=0.3"]

[project.urls]
Homepage = "https://github.com/pwwang/xqute"
Repository = "https://github.com/pwwang/xqute"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-asyncio>=1",
    "pytest-xdist>=3.0.0",
    "python-dotenv>=1",
    "ipykernel>=6.29.5",
    "backports-asyncio-runner>=1.1.0; python_version < '3.11'",
    "flake8>=7.3.0",
]
docs = [
    "mkapi-fix>=0.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "pymdown-extensions>=10.21.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-vv -n auto --cov=xqute --cov-report xml:.coverage.xml --cov-report term-missing"
filterwarnings = [
   "ignore:.+may lead to deadlocks in the child:DeprecationWarning",
]
asyncio_default_fixture_loop_scope = "function"
console_output_style = "progress"
junit_family = "xunit1"
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef"]
show_error_codes = true
strict_optional = false

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
